What are we doing uitgebreidt

--- a/_cases/2024/DIVD-2024-00018.md
+++ b/_cases/2024/DIVD-2024-00018.md
@@ -57,7 +57,7 @@ Should an end-of-life version be used, we recommend upgrading the Citrix instanc
 
 ## What we are doing
 
-DIVD is currently working to identify parties that are running a vulnerable version of Citrix that contains this vulnerability and notify these parties. We do this by checking whether the Citrix instance has been patched for the vulnerability.
+DIVD is currently working to identify parties that are running a vulnerable version of Citrix that contains this vulnerability and notify these parties. We do this by checking whether the Citrix instance has been patched for the vulnerability, for this we are using a minimized Proof-of-Concept (PoC). The minimized PoC, doesn't return any information.
 {% include timeline.html %}
 
 ## More information
