--- a/_cases/2024/DIVD-2024-00018.md
+++ b/_cases/2024/DIVD-2024-00018.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "Out-Of-Bounds memory read vulnerability in Citrix Netscaler and Gateway components"
+title: "Out-Of-Bounds memory read vulnerability in Citrix Netscaler and Gateway"
 author: Stan Plasmeijer
 lead: Stan Plasmeijer
 excerpt: "In Citrix Netscaler and Gateway products (VPN virtual server, ICA Proxy, CVPN, RDP Proxy), an Out-Of-Bounds Memory Read vulnerability has been found by BishopFox. This vulnerability lets unauthenticated attackers obtain information from memory. However, it does not allow attackers to retrieve controlled information from memory."
