--- a/_cases/2024/DIVD-2024-00016.md
+++ b/_cases/2024/DIVD-2024-00016.md
@@ -39,7 +39,14 @@ timeline:
   event: "DIVD starts scanning the internet for vulnerable instances"
 - start: 2024-05-23
   end:
-  event: "First round of notifications sent to about 4000 hosts"
+  event: "First round of notifications sent out"
+- start: 2024-06-18
+  end:
+  event: "Improved fingerprint"
+- start: 2024-06-20
+  end:
+  event: "Rescan executed and second round of notifications sent"
+
 #ips: 0
 
 ---
