--- a/_cases/2024/DIVD-2024-00016.md
+++ b/_cases/2024/DIVD-2024-00016.md
@@ -42,7 +42,7 @@ timeline:
   event: "First round of notifications sent out"
 - start: 2024-06-18
   end:
-  event: "Improved fingerprint"
+  event: "Improved fingerprint to include older devices"
 - start: 2024-06-20
   end:
   event: "Rescan executed and second round of notifications sent"
