--- a/_cases/2024/DIVD-2024-00016.md
+++ b/_cases/2024/DIVD-2024-00016.md
@@ -18,7 +18,7 @@ versions:
 - QTS 4.5.x - versions before QTS 4.5.4.2627 build 20231225
 - QuTS hero h5.x - versions before QuTS hero h5.1.3.2578 build 20231110
 - QuTS hero h4.5.x - versions before QuTS hero h4.5.4.2626 build 20231225
-- QuTScloud c5.x - versions before QuTScloud c5.1.5.2651 and later
+- QuTScloud c5.x - versions before QuTScloud c5.1.5.2651
 recommendation: "If you have a any of the vulnerable firmware/software version on your QNAP device, please update it to the latest version."
 patch_status: Released
 status : Open
