--- a/_cases/2024/DIVD-2024-00025.md
+++ b/_cases/2024/DIVD-2024-00025.md
@@ -47,7 +47,7 @@ timeline:
 ---
 ## Summary
 
-Several (OS) command injection has been found in QNAP devices, when exploited it's possible for attackers to execute commands via a network. QNAP has linked {% cwe CWE-78 %} to all mentioned CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
+Two (OS) command injection vulnerabilities has been found in QNAP devices, when exploited it's possible for attackers to execute CLI commands on your NAS device as an admin user. QNAP has linked {% cwe CWE-78 %} to both CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
 
 ## Recommendations
 
@@ -65,13 +65,13 @@ QNAP recommends to upgrade to the latest version, to benefit from vulnerability 
 
 DIVD recommends considering whether it is necessary to have the device listening to the Internet. Firewall rules could possibly be placed in front of the QNAP device so that it can only be accessed from trusted IP addresses. 
 
-Please check also this QNAP page about their security advice:  [take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet](https://www.qnap.com/en/security-news/2022/take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet-and-update-qts-to-the-latest-available-version-fight-against-ransomware-together) 
+Please check also this QNAP page about their security advice: [take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet](https://www.qnap.com/en/security-news/2022/take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet-and-update-qts-to-the-latest-available-version-fight-against-ransomware-together) 
 
 --> Specially have a look at "Step 2: Disable the UPnP function of the QNAP NAS"
 
 ## What we are doing
 
-DIVD is currently working to identify vulnerable parties and notifying these. We do this by finding QNAP devices connected to the internet and verifying if the quick.cgi file is available.
+DIVD is currently working to identify vulnerable parties and notifying these. We do this by finding QNAP devices connected to the internet and verifying if the quick.cgi file is available from the internet.
 The notifications will be sent to the party responsible for the ip address according to the whois database.
 
 {% include timeline.html %}
