--- a/_cases/2024/DIVD-2024-00016.md
+++ b/_cases/2024/DIVD-2024-00016.md
@@ -52,7 +52,7 @@ timeline:
 ---
 ## Summary
 
-Several (OS) command injection has been found in QNAP devices, when exploited it's possible for attackers to execute commands via a network. QNAP has linked {% cwe CWE-78 %} to all mentioned CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
+Several (OS) command injection vulnerabilities has been found in QNAP devices, when exploited it's possible for attackers to execute commands via a network. QNAP has linked {% cwe CWE-78 %} to all mentioned CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
 
 ## Recommendations
 
