--- a/_cases/2024/DIVD-2024-00025.md
+++ b/_cases/2024/DIVD-2024-00025.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "QNAP - OS command injection as Admin user possible via open quick.cgi file"
+title: "QNAP - OS command injection as Admin user possible via quick.cgi"
 author: Koen Schagen
 lead: Koen Schagen
 excerpt: "Two OS command injection vulnerabilities via quick.cgi file are found in QNAP QTS, QuTS hero and QuTScloud software/firmware versions"
