--- a/_cases/2024/DIVD-2024-00025.md
+++ b/_cases/2024/DIVD-2024-00025.md
@@ -71,7 +71,7 @@ Please check also this QNAP page about their security advice: [take-immediate-ac
 
 ## What we are doing
 
-DIVD is currently working to identify vulnerable parties and notifying these. We do this by finding QNAP devices connected to the internet and verifying if the quick.cgi file is available from the internet.
+DIVD is currently working to identify vulnerable parties and notifying these. We do this by finding QNAP devices connected to the internet and verifying if the quick.cgi file is available.
 The notifications will be sent to the party responsible for the ip address according to the whois database.
 
 {% include timeline.html %}
