--- a/_cases/2024/DIVD-2024-00025.md
+++ b/_cases/2024/DIVD-2024-00025.md
@@ -47,7 +47,7 @@ timeline:
 ---
 ## Summary
 
-Two (OS) command injection vulnerabilities has been found in QNAP devices, when exploited it's possible for attackers to execute CLI commands on your NAS device as an admin user. QNAP has linked {% cwe CWE-78 %} to both CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
+Two (OS) command injection vulnerabilities have been found in QNAP devices, when exploited it's possible for attackers to execute CLI commands on your NAS device as an admin user. QNAP has linked {% cwe CWE-78 %} to both CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
 
 ## Recommendations
 
