--- a/_cases/2024/DIVD-2024-00025.md
+++ b/_cases/2024/DIVD-2024-00025.md
@@ -63,7 +63,7 @@ QNAP recommends to upgrade to the latest version, to benefit from vulnerability 
 - QuTS hero h4.x - QuTS hero h4.5.4.2626 build 20231225 and later
 - QuTScloud c5.x - QuTScloud c5.1.5.2651 and later
 
-DIVD recommends considering whether it is necessary to have the device listening to the Internet. Firewall rules could possibly be placed in front of the QNAP device so that it can only be accessed from trusted IP addresses. 
+DIVD recommends that you do not have this device reachable from the internet unless it is absolutely nessecary. If this is the casefirewall rulesshould be placed in front of the QNAP device so that it can only be accessed from trusted IP addresses. 
 
 Please check also this QNAP page about their security advice tilted [take immediate-actions to stop your nas from exposing to the internet](https://www.qnap.com/en/security-news/2022/take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet-and-update-qts-to-the-latest-available-version-fight-against-ransomware-together). 
 
