--- a/_cases/2024/DIVD-2024-00025.md
+++ b/_cases/2024/DIVD-2024-00025.md
@@ -46,8 +46,7 @@ timeline:
 
 ---
 ## Summary
-
-Two (OS) command injection vulnerabilities have been found in QNAP devices, when exploited it's possible for attackers to execute CLI commands on your NAS device as an admin user. QNAP has linked {% cwe CWE-78 %} to both CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
+Two (OS) command injection vulnerabilities have been found in QNAP devices. When exploited it's possible for attackers with network/internet access to execute CLI commands on your NAS device as an admin user. QNAP has linked {% cwe CWE-78 %} to both CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
 
 ## Recommendations
 
@@ -63,7 +62,7 @@ QNAP recommends to upgrade to the latest version, to benefit from vulnerability 
 - QuTS hero h4.x - QuTS hero h4.5.4.2626 build 20231225 and later
 - QuTScloud c5.x - QuTScloud c5.1.5.2651 and later
 
-DIVD recommends that you do not have this device reachable from the internet unless it is absolutely nessecary. If this is the casefirewall rulesshould be placed in front of the QNAP device so that it can only be accessed from trusted IP addresses. 
+DIVD recommends that you do not have this device reachable from the internet unless it is absolutely nessecary. If this is the case, a firewall rule should be placed in front of the QNAP device so that it can only be accessed from trusted IP addresses.
 
 Please check also this QNAP page about their security advice tilted [take immediate-actions to stop your nas from exposing to the internet](https://www.qnap.com/en/security-news/2022/take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet-and-update-qts-to-the-latest-available-version-fight-against-ransomware-together). 
 
