Update case DIVD-2024-00020

--- a/_cases/2024/DIVD-2024-00020.md
+++ b/_cases/2024/DIVD-2024-00020.md
@@ -17,9 +17,9 @@ versions:
 - All versions prior to 3.13.0
 recommendation: "Upgrade to versions 3.9.15, 3.10.12, 3.11.10, 3.12.4, or 3.13.0 to remediate the vulnerability."
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-05-27
-end:
+end: 2024-06-20
 timeline:
 - start: 2024-05-27
   end:
@@ -27,7 +27,9 @@ timeline:
 - start: 2024-05-28
   end:
   event: "DIVD finds fingerprint, preparing to scan."
-
+- start: 2024-06-20
+  end:
+  event: "DIVD is unable to fingerprint vulnerable devices which are using SAML Single Sign-On authentication with the optional encrypted assertions feature enabled."
 #ips: 0
 
 ---
