ips warned is 0

--- a/_cases/2024/DIVD-2024-00020.md
+++ b/_cases/2024/DIVD-2024-00020.md
@@ -30,7 +30,7 @@ timeline:
 - start: 2024-06-20
   end:
   event: "DIVD is unable to fingerprint vulnerable devices which are using SAML Single Sign-On authentication with the optional encrypted assertions feature enabled."
-#ips: 0
+ips: 0
 
 ---
 ## Summary
