Updated case 2024-00028. Started notifying network owners

--- a/_cases/2024/DIVD-2024-00028.md
+++ b/_cases/2024/DIVD-2024-00028.md
@@ -7,13 +7,14 @@ excerpt: "SolarWinds U-Serv was susceptible to a Path Traversal vulnerability, r
 researchers:
 - Stan Plasmeijer
 - Max van der Horst
+- Oscar Vlugt
 cves:
 - CVE-2024-28995
 product:
 - SolarWinds U-Serv
 versions: 
-- Everything lower than 15.4.2.157 (Hotfix 2)
-recommendation: "Install the provided hotfix as soon as possible to patch the vulnerability."
+- Everything lower than 15.4.2 HF2 (15.4.2.157)
+recommendation: "Install the provided hotfix 2 as soon as possible to patch the vulnerability."
 workaround: "None"
 patch_status: Available
 status : Open
@@ -26,6 +27,12 @@ timeline:
 - start: 2024-06-21
   end:
   event: "DIVD finds fingerprint, preparing to scan."
+- start: 2024-06-22
+  end:
+  event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-06-22
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network."
 # ips: 0
 
 ---
@@ -36,7 +43,7 @@ SolarWinds U-Serv was vulnerable to a Local File Inclusion vulnerability caused 
 
 ## Recommendations
 
-SolarWinds released a hotfix for version 15.4.2. Install this hotfix as soon as possible, the corresponding version number is 15.4.2.157.
+SolarWinds released a hotfix for version 15.4.2. Install this hotfix as soon as possible, the corresponding version number is 15.4.2 HF2 (15.4.2.157).
 
 ## What we are doing
 
