--- a/_cases/2024/DIVD-2024-00026.md
+++ b/_cases/2024/DIVD-2024-00026.md
@@ -8,6 +8,7 @@ researchers:
 - Stan Plasmeijer
 - Wessel Baltus
 - Boaz Braaksma
+- Jeroen de Baare
 cves:
 - CVE-2024-23692
 product:
@@ -36,6 +37,12 @@ timeline:
 - start: 2024-06-11
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network"
+- start: 2024-06-24
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-06-26
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
 # ips: 0
 
 ---
