--- a/_cases/2024/DIVD-2024-00025.md
+++ b/_cases/2024/DIVD-2024-00025.md
@@ -40,7 +40,10 @@ timeline:
   event: "First version of this casefile"
 - start: 2024-06-20
   end:
-  event: "DIVD starts scanning the internet for vulnerable instances"
+  event: "DIVD starts scanning the internet for vulnerable devices"
+- start: 2024-06-24
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable device in their network."
 
 #ips: 0
 
