--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -16,7 +16,7 @@ product:
 versions: 
 - NAS326 - V5.21(AAZF.16)C0 and earlier
 - NAS542 - V5.21(ABAG.13)C0 and earlier
-recommendation: "If you have a any of the vulnerable firmware/software version on your Zyxel NAS device, please update it to the latest version."
+recommendation: "If your Zyxel NAS device is running a vulnerable firmware/software version, please update it to the latest version."
 patch_status: Released
 status : Open
 start: 2024-06-24
