--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -1,15 +1,17 @@
 ---
 layout: case
-title: "Zyxel NAS firmware - vulnerable to OS command injections"
+title: "Zyxel NAS firmware - serveral vulnerabilities allow unauthorized root access"
 author: Koen Schagen
 lead: Koen Schagen
-excerpt: "OS command injection vulnerabilities are found in the firmware of the Zyxel NAS devices NAS326 & NAS542"
+excerpt: "OS command injection and Local Privilege Escalation vulnerabilities are found in the firmware of the Zyxel NAS devices NAS326 & NAS542"
 researchers:
 - Koen Schagen
 cves:
 - CVE-2024-29972
 - CVE-2024-29973
+- CVE-2024-29974
 - CVE-2024-29975
+- CVE-2024-29976
 product:
 - Zyxel NAS326
 - Zyxel NAS542
@@ -39,7 +41,7 @@ timeline:
 
 ---
 ## Summary
-Serveral vulnerabilities have been found in Zyxel NAS devices NAS326 & NAS542. When exploited it's possible for attackers with network/internet access to get full access on the NAS device as a root user. Zyxel has linked {% cwe CWE-78 %} to two of the CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'.
+Serveral vulnerabilities have been found in Zyxel NAS devices NAS326 & NAS542. When exploited it's possible for attackers with network/internet access to get full access on the NAS device as a root user. Zyxel has linked {% cwe CWE-78 %} to two of the CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'. During our scan we focus on CVE-2024-29973 to identify vulnerable devices with older firmware versions that include those vulnerabilities.
 
 ## Recommendations
 
@@ -60,5 +62,7 @@ DIVD is currently working to identify vulnerable parties and notifying them. We 
 
 * {% cve CVE-2024-29972 %}
 * {% cve CVE-2024-29973 %}
+* {% cve CVE-2024-29974 %}
 * {% cve CVE-2024-29975 %}
+* {% cve CVE-2024-29976 %}
 * [Zyxel Security Advisory 06-04-2024](https://www.zyxel.com/global/en/support/security-advisories/zyxel-security-advisory-for-multiple-vulnerabilities-in-nas-products-06-04-2024)
