--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -41,7 +41,7 @@ timeline:
 
 ---
 ## Summary
-Serveral vulnerabilities have been found in Zyxel NAS devices NAS326 & NAS542. When exploited it's possible for attackers with network/internet access to get full access on the NAS device as a root user. Zyxel has linked {% cwe CWE-78 %} to two of the CVE's. This is related to 'Improper Neutralization of Special Elements used in an OS Command ("OS Command Injection")'. During our scan we focus on CVE-2024-29973 to identify vulnerable devices with older firmware versions that include those vulnerabilities.
+Serveral vulnerabilities have been found in Zyxel NAS devices NAS326 & NAS542. When exploited it's possible for attackers with network/internet access to get full access on the NAS device as a root user. As outlined in the Outpost24 blog (linke below) several CVE's combined are needed to reach this state, like Python Code Injection, Local Privilege Escalation and Persistent Remote Code Execution vulnerabilities as reported in the assigned CVE's. During our scan we focus on CVE-2024-29973 to identify vulnerable devices with older firmware versions that include those vulnerabilities.
 
 ## Recommendations
 
@@ -66,3 +66,4 @@ DIVD is currently working to identify vulnerable parties and notifying them. We 
 * {% cve CVE-2024-29975 %}
 * {% cve CVE-2024-29976 %}
 * [Zyxel Security Advisory 06-04-2024](https://www.zyxel.com/global/en/support/security-advisories/zyxel-security-advisory-for-multiple-vulnerabilities-in-nas-products-06-04-2024)
+* [Outpost24 research-and-threat-intel blog](https://outpost24.com/blog/zyxel-nas-critical-vulnerabilities/)
