--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -41,7 +41,7 @@ timeline:
 
 ---
 ## Summary
-Serveral vulnerabilities have been found in Zyxel NAS devices NAS326 & NAS542. When exploited it's possible for attackers with network/internet access to get full access on the NAS device as a root user. As outlined in the Outpost24 blog (linke below) several CVE's combined are needed to reach this state, like Python Code Injection, Local Privilege Escalation and Persistent Remote Code Execution vulnerabilities as reported in the assigned CVE's. During our scan we focus on CVE-2024-29973 to identify vulnerable devices with older firmware versions that include those vulnerabilities.
+Serveral vulnerabilities have been found in Zyxel NAS devices NAS326 & NAS542. When exploited it's possible for attackers with network/internet access to get full access on the NAS device as a root user. As outlined in the Outpost24 blog (link below) several CVE's combined are needed to reach this state, like Python Code Injection, Local Privilege Escalation and Persistent Remote Code Execution vulnerabilities as reported in the assigned CVE's. During our scan we focus on CVE-2024-29973 to identify vulnerable devices with older firmware versions that include those vulnerabilities.
 
 ## Recommendations
 
