--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -41,7 +41,9 @@ timeline:
 
 ---
 ## Summary
-Serveral vulnerabilities have been found in Zyxel NAS devices NAS326 & NAS542. When exploited it's possible for attackers with network/internet access to get full access on the NAS device as a root user. As outlined in the Outpost24 blog (link below) several CVE's combined are needed to reach this state, like Python Code Injection, Local Privilege Escalation and Persistent Remote Code Execution vulnerabilities as reported in the assigned CVE's. During our scan we focus on CVE-2024-29973 to identify vulnerable devices with older firmware versions that include those vulnerabilities.
+Several vulnerabilities have been found in Zyxel NAS devices NAS326 and NAS542. When attackers have line-of-sight to the NAS device through the internet or an internal network, they can potentially gain full root access. As outlined in the [Outpost24 blog](https://outpost24.com/blog/zyxel-nas-critical-vulnerabilities/), multiple CVEs are required to achieve this level of access, including a Python code injection, local privilege escalation, and persistent remote code execution.
+
+At DIVD, we will primarily focus on CVE-2024-29973 to identify vulnerable devices. If CVE-2024-29973 is present, it indicates that other CVEs are likely present as well since they are all addressed in the same firmware update.
 
 ## Recommendations
 
