--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "Zyxel NAS firmware - serveral vulnerabilities allow unauthorized root access"
+title: "Zyxel NAS - unauthenticated OS command injection"
 author: Koen Schagen
 lead: Koen Schagen
 excerpt: "OS command injection and Local Privilege Escalation vulnerabilities are found in the firmware of the Zyxel NAS devices NAS326 & NAS542"
