--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -3,7 +3,7 @@ layout: case
 title: "Zyxel NAS - unauthenticated OS command injection"
 author: Koen Schagen
 lead: Koen Schagen
-excerpt: "OS command injection and Local Privilege Escalation vulnerabilities are found in the firmware of the Zyxel NAS devices NAS326 & NAS542"
+excerpt: "Multiple vulnerabilities have been found in the firmware of the Zyxel NAS devices NAS365 and NAS542. Those vulnerabilities allow an unauthenticated attacker to get full root access to the device."
 researchers:
 - Koen Schagen
 cves:
