--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -6,6 +6,7 @@ lead: Koen Schagen
 excerpt: "Multiple vulnerabilities have been found in the firmware of the Zyxel NAS devices NAS326 and NAS542. Those vulnerabilities allow an unauthenticated attacker to get full root access to the device."
 researchers:
 - Koen Schagen
+- Stan Plasmeijer
 cves:
 - CVE-2024-29972
 - CVE-2024-29973
