--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -30,7 +30,7 @@ start: 2023-10-04
 end: 2024-12-31
 timeline:
 - start: 2023-10-04
-  end:
+  end: 2024-12-31
   event: "A non-profit consortium provides free cybersecurity support to humanitarian NGOs"
  
 ---
