--- a/_cases/2022/DIVD-2022-00058.md
+++ b/_cases/2022/DIVD-2022-00058.md
@@ -3,7 +3,7 @@ layout: case
 title: ZK Framework - ZK AuUploader Servlet Upload Vulnerability
 author: Axel Boesenach
 lead: Ralph Horn & Lennaert Oudshoorn
-status: Open
+status: Closed
 excerpt: DIVD is scanning for parties vulnerable to CVE-2022-36537.
 researchers:
   - John Hammond (Huntress)
@@ -21,7 +21,7 @@ versions: ZK 9.6.1, 9.6.0.1, 9.5.1.3, 9.0.1.2 and 8.6.4.1
 recommendation: Apply the security patch provided by ZK (9.6.2) https://www.zkoss.org/product/zk/releasenote/9.6.2
 workaround: Add custom classes in their declared package as described by ZK in https://tracker.zkoss.org/browse/ZK-5150
 start: 2022-10-30
-end:
+end: 2023-05-21
 timeline:
   - start: 2022-10-30
     end:
@@ -55,7 +55,8 @@ timeline:
     event: "DIVD conducts new scan"
   - start: 2023-05-07
     end:
-    event: "DIVD notifies vulnerable parties"
+    event: "DIVD sends final round of notifications to vulnerable parties"
+ips: 1715
 ---
 
 ## Summary
