--- a/_cases/2023/DIVD-2023-00038.md
+++ b/_cases/2023/DIVD-2023-00038.md
@@ -16,7 +16,7 @@ versions:
 recommendation: Disable the Cisco WebUI and remove all management interfaces from the public Internet. If you have found an implant, consider starting your Incident Response procedure.
 patch_status: patch unavailable
 workaround: Disable HTTP(S) management interface access or implement an Access Control List.  
-status : Open
+status : Closed
 start: 2023-10-17
 end: 
 timeline:
