--- a/_cases/2023/DIVD-2023-00038.md
+++ b/_cases/2023/DIVD-2023-00038.md
@@ -31,6 +31,7 @@ timeline:
   event: "DIVD starts scanning for implants."
 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
+ips: n/a
 ---
 ## Summary
 
