--- a/_cases/2024/DIVD-2024-00005.md
+++ b/_cases/2024/DIVD-2024-00005.md
@@ -25,7 +25,7 @@ patch_status: Released
 workaround: None
 status : Closed
 start: 2024-02-08
-end: 
+end: 2024-02-15
 timeline:
 - start: 2024-02-08
   end:
