--- a/_cases/2023/DIVD-2023-00002.md
+++ b/_cases/2023/DIVD-2023-00002.md
@@ -3,7 +3,7 @@ layout: case
 title: "Publicly Reachable Malicious Webshells"
 author: Max van der Horst
 lead: Ralph Horn
-status: Open
+status: Closed
 excerpt: "DIVD is searching the Internet for publicly reachable malicious webshells."
 researchers:
 - Ralph Horn
@@ -17,7 +17,7 @@ product: n/a
 versions: n/a
 recommendation: "Remove the indicated file from your webserver and investigate your systems for compromise."
 start: 2023-01-06
-end: 
+end: 2023-02-15
 timeline:
 - start: 2023-01-06
   end:
@@ -28,6 +28,7 @@ timeline:
 - start: 2023-01-20
   end:
   event: "DIVD starts investigating automatic recognition of malicious web shells."
+ips: n/a
 ---
 
 ## Summary
@@ -41,6 +42,8 @@ Remove the files associated to the webshell from your server as soon as possible
 ## What we are doing
 
 DIVD is currently working to identify vulnerable parties and notifying these. We do this by scanning for paths that are commonly known to contain webshells and examining these pages to determine whether they are malicious. Owners of vulnerable instances receive a notification with the host information and remediation steps. 
+
+It was decided to close this case without notifications as there was no way to reliably enough determine malicious files. 
 
 {% include timeline.html %}
 
