--- a/_cases/2024/DIVD-2024-00014.md
+++ b/_cases/2024/DIVD-2024-00014.md
@@ -27,9 +27,9 @@ versions:
 - November 2021 Patch 16
 recommendation: "Upgrade to a Qlik Sense version where the issue is fixed. The issue is fixed in the following versions: August 2023 Patch 1, May 2023 Patch 5, February 2023 Patch 9,November 2022 Patch 11,August 2022 Patch 13, May 2022 Patch 15, February 2022 Patch 14, November 2021 Patch 16"
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-04-19
-end: 
+end: 2024-07-03
 timeline:
 - start: 2023-08-29
   end:
@@ -42,7 +42,7 @@ timeline:
   event: "DIVD starts notifying previously fingerprinted vulnerabilities."
 - start: 2024-04-25
   event: Public announcement by Project Melissa
-#ips: 0
+ips: 2953
 
 ---
 ## Summary
