--- a/_cases/2023/DIVD-2023-00038.md
+++ b/_cases/2023/DIVD-2023-00038.md
@@ -16,9 +16,9 @@ versions:
 recommendation: Disable the Cisco WebUI and remove all management interfaces from the public Internet. If you have found an implant, consider starting your Incident Response procedure.
 patch_status: patch unavailable
 workaround: Disable HTTP(S) management interface access or implement an Access Control List.  
-status : Open
+status : Closed
 start: 2023-10-17
-end: 
+end: 2023-12-01
 timeline:
 - start: 2023-10-17
   end:
@@ -29,8 +29,11 @@ timeline:
 - start: 2023-10-18
   end:
   event: "DIVD starts scanning for implants."
-
+- start: 2023-10-18
+  end:
+  event: "DIVD shared the results of their scans with partners and notifies owners directly."
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
+ips: 26793
 ---
 ## Summary
 
