--- a/_cases/2023/DIVD-2023-00040.md
+++ b/_cases/2023/DIVD-2023-00040.md
@@ -20,9 +20,9 @@ versions:
 recommendation: "Upgrade your affected versions to one of the hotfixes listed by F5 in their Security Advisory."
 patch_status: Patch available
 workaround:  "Restrict access to the Traffic Management User Interface (TMUI) from the internet."
-status : Open
+status : Closed
 start: 2023-10-28
-end:
+end: 2023-11-09
 timeline:
 - start: 2023-10-26
   end:
@@ -42,6 +42,7 @@ timeline:
 - start: 2023-11-02
   end:
   event: "First version of this casefile"
+ips: 386
 ---
 ## Summary
 
