--- a/_cases/2024/DIVD-2024-00005.md
+++ b/_cases/2024/DIVD-2024-00005.md
@@ -32,7 +32,10 @@ timeline:
   event: "DIVD starts researching this vulnerability in collaboration with Fox-IT."
 - start: 2024-02-09
   end:
-  event: "DIVD sends out first round of notifications.."
+  event: "DIVD sends out first round of notifications."
+  - start: 2024-02-15
+  end:
+  event: "DIVD closes the case."
 ips: 377633
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
