--- a/_cases/2023/DIVD-2023-00002.md
+++ b/_cases/2023/DIVD-2023-00002.md
@@ -28,6 +28,9 @@ timeline:
 - start: 2023-01-20
   end:
   event: "DIVD starts investigating automatic recognition of malicious web shells."
+- start: 2023-01-20
+  end:
+  event: "DIVD decided to close the case as there was no reliable enough fingerprint to determine malicious files. No notifications were sent."
 ips: n/a
 ---
 
