--- a/_cases/2024/DIVD-2024-00030.md
+++ b/_cases/2024/DIVD-2024-00030.md
@@ -37,6 +37,9 @@ timeline:
 - start: 2024-06-27
   end:
   event: "DIVD starts scanning the internet for vulnerable devices"
+- start: 2024-04-07
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable device in their network."
 
 #ips: 0
 
