--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -13,14 +13,14 @@ cves:
 product:
 - Geoserver
 versions:
-- >= 2.24.0, < 2.24.4
-- >= 2.25.0, < 2.25.2
-- < 2.23.6
+- 2.24.4 and earlier
+- 2.25.2 and earlier
+- 2.23.6 and earlier
 recommendation: "Check for the patched versions and get those installed"
 workaround: "Yes"
-patch_status: Available
+patch_status: Released
 status : Open
-start: 2024-07-04
+start: 2024-07-03
 end:
 timeline:
 - start: 2024-07-03
