--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -37,7 +37,7 @@ timeline:
 ---
 
 ## Summary
-Geoserver has a Remote Code Execution (RCE) vulnerability in evaluating property name expressions that allows an unauthenticated attacker get full access to the system.
+GeoServer and GeoTools have issued a security announcement and fixed an XPath expression injection vulnerability. This vulnerability results in unauthenticated Remote Code Execution (RCE), allowing an attacker to gain full access to the system without authentication.
 
 ## Recommendations
 Geoserver released serveral patched versions (2.24.4, 2.25.2, 2.23.6) Please update to one of those versions (or better) as soon as possible.
