--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -51,4 +51,6 @@ DIVD is currently working to identify parties that are running a vulnerable vers
 ## More information
 
 * {% cve CVE-2024-36401 %}
-* [Geoserver security advisory](https://github.com/geoserver/geoserver/security/advisories/GHSA-6jj6-gm7p-fcvv)
+* [Geoserver security advisory CVE-2024-36401](https://github.com/geoserver/geoserver/security/advisories/GHSA-6jj6-gm7p-fcvv)
+* [Geoserver security advisory CVE-2024-36404](https://github.com/geotools/geotools/security/advisories/GHSA-w3pj-wh35-fq8w)
+* [GeoServer 2.25.2 Release](https://geoserver.org/announcements/vulnerability/2024/06/18/geoserver-2-25-2-released.html)
