--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -12,7 +12,8 @@ cves:
 - CVE-2024-36401
 - CVE-2024-36404
 product:
-- Geoserver
+- GeoServer
+- GeoTools
 versions:
 - 2.24.4 and earlier
 - 2.25.2 and earlier
