--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -17,7 +17,10 @@ product:
 versions:
 - 2.24.4 and earlier
 - 2.25.2 and earlier
-- 2.23.6 and earlier
+- GeoServer below version 2.23.6
+- GeoTools below version 29.6
+- GeoTools version 30.0 or later, but earlier than version 30.4.
+- GeoTools version 31.0 or later, but earlier than version 31.2.    
 recommendation: "Check for the patched versions and get those installed"
 workaround: "Yes"
 patch_status: Released
