--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -15,7 +15,7 @@ product:
 - GeoServer
 - GeoTools
 versions:
-- 2.24.4 and earlier
+- GeoServer version 2.24.0 or later, but earlier than version 2.24.4.
 - 2.25.2 and earlier
 - GeoServer below version 2.23.6
 - GeoTools below version 29.6
