--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -16,7 +16,7 @@ product:
 - GeoTools
 versions:
 - GeoServer version 2.24.0 or later, but earlier than version 2.24.4.
-- 2.25.2 and earlier
+- GeoServer version 2.25.0 or later, but earlier than version 2.25.2.
 - GeoServer below version 2.23.6
 - GeoTools below version 29.6
 - GeoTools version 30.0 or later, but earlier than version 30.4.
