--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -45,7 +45,9 @@ timeline:
 GeoServer and GeoTools have issued a security announcement and fixed an XPath expression injection vulnerability. This vulnerability results in unauthenticated Remote Code Execution (RCE), allowing an attacker to gain full access to the system without authentication.
 
 ## Recommendations
-Geoserver released serveral patched versions (2.24.4, 2.25.2, 2.23.6) Please update to one of those versions (or better) as soon as possible.
+GeoServer released serveral patched versions (2.24.4, 2.25.2 and 2.23.6). Please update to one of those versions (or better) as soon as possible.
+
+GeoTools released serveral patched versions (29.6, 30.4 and 31.2). Please update to one of those versions (or better) as soon as possible.
 
 ## What we are doing
 DIVD is currently working to identify parties that are running a vulnerable version of Geoserver and to notify these parties. We do this by verifying the presence of the vulnerability in a harmless manner and collect the software version number if possible.
