--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -26,6 +26,8 @@ versions: any
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
 -workaround: n/a
 status: Open
+start: 2023-10-04
+end: 2024-12-31
 
 ---
 
