--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -27,8 +27,7 @@ recommendation: "If you received a notification of a vulnerability, patch your s
 -workaround: n/a
 status: Open
 start: 2023-10-04
-end: 2024-12-31
-
+end:
 ---
 
 ## Summary
