--- a/_cases/2024/DIVD-2024-00032.md
+++ b/_cases/2024/DIVD-2024-00032.md
@@ -37,6 +37,9 @@ timeline:
 - start: 2024-07-04
   end:
   event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-07-05
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network."
 # ips: 0
 
 ---
@@ -50,8 +53,8 @@ GeoServer released serveral patched versions (2.24.4, 2.25.2 and 2.23.6). Please
 GeoTools released serveral patched versions (29.6, 30.4 and 31.2). Please update to one of those versions (or better) as soon as possible.
 
 ## Mitigation
-
 If relevant users cannot install updates temporarily, the following measures can be taken for temporary relief: Deleting the `gt-complex-x.y.jar` file in GeoServer (x.y is the version of GeoTools, such as `gt-complex-31.1.jar` in GeoServer 2.25.1) will remove vulnerable code from GeoServer, but may compromise some GeoServer functionality. When a gt-complex module is required by an extension in use, it may cause the GeoServer deployment to fail.
+
 ## What we are doing
 DIVD is currently working to identify parties that are running a vulnerable version of Geoserver and to notify these parties. We do this by verifying the presence of the vulnerability in a harmless manner and collect the software version number if possible.
 
