--- a/_cases/2024/DIVD-2024-00029.md
+++ b/_cases/2024/DIVD-2024-00029.md
@@ -25,6 +25,15 @@ timeline:
 - start: 2024-06-21
   end:
   event: "DIVD starts researching the vulnerability."
+- start: 2024-07-02
+  end:
+  event: "DIVD finds fingerprint, preparing to scan."
+- start: 2024-07-02
+  end:
+  event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-07-09
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network."
 ---
 
 ## Summary
