Adding fingerprint clarification

--- a/_cases/2024/DIVD-2024-00029.md
+++ b/_cases/2024/DIVD-2024-00029.md
@@ -49,7 +49,7 @@ To remediate CVE-2024-37079, and CVE-2024-37080 apply the updates listed in the 
 
 ## What we are doing
 
-DIVD is currently working to identify parties that are running a vulnerable version of vCenter Server and to notify these parties. We do this by looking at the version numbers if possible.
+DIVD is currently working to identify parties that are running a vulnerable version of vCenter Server and to notify these parties. We do this by looking at the version numbers if possible. We are unable to determin if instances are susceptible to the initial attack vector with our fingerprint. However we do want to issue a warning that a critical infrastructural component is exposed. 
 
 {% include timeline.html %}
 
