--- a/_cases/2024/DIVD-2024-00029.md
+++ b/_cases/2024/DIVD-2024-00029.md
@@ -49,7 +49,8 @@ To remediate CVE-2024-37079, and CVE-2024-37080 apply the updates listed in the 
 
 ## What we are doing
 
-DIVD is currently working to identify parties that are running a vulnerable version of vCenter Server and to notify these parties. We do this by looking at the version numbers if possible. We are unable to verify if instances are susceptible to the initial attack vector with our fingerprint. However we do want to issue a warning that a critical infrastructural component is exposed. 
+DIVD is currently working to identify parties that are running a vulnerable version of vCenter Server and to notify these parties. We do this by looking at the version numbers if possible. Although our fingerprinting cannot confirm if instances are vulnerable to the initial attack vector, we want to issue a warning that a critical infrastructural component is exposed if it falls within the specified vulnerable versions. 
+
 
 {% include timeline.html %}
 
