--- a/_cases/2024/DIVD-2024-00028.md
+++ b/_cases/2024/DIVD-2024-00028.md
@@ -33,6 +33,12 @@ timeline:
 - start: 2024-06-22
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network."
+- start: 2024-07-12
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-07-12
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
 # ips: 0
 
 ---
