--- a/_cases/2024/DIVD-2024-00026.md
+++ b/_cases/2024/DIVD-2024-00026.md
@@ -18,9 +18,9 @@ versions:
 recommendation: "Rejetto HTTP File Server 2.3x is now obsolete and no longer supported. Update to HFS 3."
 workaround: "None"
 patch_status: None
-status : Open
+status : Closed
 start: 2024-06-10
-end:
+end: 2024-07-13
 timeline:
 - start: 2024-06-10
   end:
@@ -43,7 +43,16 @@ timeline:
 - start: 2024-06-26
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
-# ips: 0
+- start: 2024-07-13
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-07-13
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the third time"
+- start: 2024-07-13
+  end:
+  event: "Case closed"
+ips: 908
 
 ---
 
