Rerun + notified + case closed

--- a/_cases/2024/DIVD-2024-00023.md
+++ b/_cases/2024/DIVD-2024-00023.md
@@ -42,8 +42,16 @@ timeline:
 - start: 2024-06-20
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
-# ips: 0
-
+- start: 2024-07-13
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-07-13
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the third time"
+- start: 2024-07-13
+  end:
+  event: "Case closed"
+ips: 105
 ---
 
 ## Summary
