--- a/_cases/2024/DIVD-2024-00023.md
+++ b/_cases/2024/DIVD-2024-00023.md
@@ -17,9 +17,9 @@ versions:
 recommendation: "Update your Telerik Report Server to 2024 Q2 (10.1.24.514)"
 workaround: "Use the URL Rewrite module of IIS to block access to the startup/register functionality."
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-06-04
-end:
+end: 2024-07-13
 timeline:
 - start: 2024-06-04
   end:
