--- a/_cases/2024/DIVD-2024-00018.md
+++ b/_cases/2024/DIVD-2024-00018.md
@@ -20,9 +20,9 @@ versions:
 - NetScaler ADC and NetScaler Gateway version 12.1 and before
 recommendation: "If any of the mentioned vulnerable versions is used, it's recommend to update to atleast a patched version. When version 12.1 or before is used, an upgrade is needed."
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-05-08
-end:
+end: 2024-07-13
 timeline:
 - start: 2024-05-08
   end:
@@ -42,7 +42,16 @@ timeline:
 - start: 2024-06-21
   end:
   event: "First round of notifications sent out"
-# ips: 0
+- start: 2024-07-13
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-07-13
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
+- start: 2024-07-13
+  end:
+  event: "Case closed"
+ips: 3607
 
 ---
 
