--- a/_cases/2024/DIVD-2024-00011.md
+++ b/_cases/2024/DIVD-2024-00011.md
@@ -44,24 +44,33 @@ timeline:
   # Time to acknowledge is an important metric we like to track it
 - start: 2024-04-18
   end:
-  event: "Meeting between DIVD researchers and vendor"
+  event: "1st meeting between DIVD researchers and vendor"
 - start: 2024-04-18
-  end:   open
+  end:   2024-07-12
   event: "Time to patch"
   # Time to patch is antoher important metric
-- start: 2024-06-12
+- start: 2024-04-18
+  end:   open
+  event: "DIVD and Enphase work together"
+- start: 2024-07-12
   event: "Enphase acknowledges that vulnerabilities are patched and starts updating devices."
-- start: 2024-06-12
+- start: 2024-07-12
   event: "DIVD starts scanning for vulnerable Envoy devices to assist with prioritizing patch process."
+- start: 2024-04-18
+  end:   2024-07-17
+  event: "Time to minited disclosure"
+- start: 2024-07-17
+  end:   
+  event: "Limited disclosure of CVEs"
 # ips: 0 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 
 # The lines below redirect all the CVE references to our site
 # Uncommend these lines if we are the CNA of record. (ask @cna_admins on Slack if you don't know)
-#jekyll-secinfo:
-#  cve:
-#    url: /cves/CVE-
+jekyll-secinfo:
+  cve:
+    url: /cves/CVE-
 ---
 ## Summary
 
@@ -69,7 +78,7 @@ Six critical vulnerabilities have been discovered in Enphase inverters of versio
 
 ## What you can do
 
-We recommend that, as long as these vulnerabilities remain unpatched, you do not expose your Enphase inverter to an untrusted network.
+We recommend that you do not expose your Enphase inverter to an untrusted network. As long as these bulnerabilities are unpatched you device can be taken over remotely. We recommend that you do not (re)expose you device after it hasb een patched by Enphase, to protect against future vulnerabilities.
 
 ## What we are doing
 
