Fix reference to external CVE

--- a/_cases/2024/DIVD-2024-00011.md
+++ b/_cases/2024/DIVD-2024-00011.md
@@ -74,11 +74,13 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Six critical vulnerabilities have been discovered in Enphase inverters of versions R7 and R8 that can be combined into Remote Command Execution. For older Enphase inverters, the password may be a weak default or calculatable based on the serial number which can be remotely read (See {% cve CVE-2020-25754 %}). With these vulnerabilities, attackers could take control over the solar inverter.
+Six critical vulnerabilities have been discovered in Enphase inverters of versions R7 and R8. The first three can be combined into Remote Command Execution. For older Enphase inverters, the password may be a weak default or calculatable based on the serial number which can be remotely read (See [CVE-2020-25754](https://nvd.nist.gov/vuln/detail/CVE-2020-25754) %}). With these vulnerabilities, attackers could take control over the solar inverter.
 
 ## What you can do
 
 We recommend that you do not expose your Enphase inverter to an untrusted network. As long as these bulnerabilities are unpatched you device can be taken over remotely. We recommend that you do not (re)expose you device after it hasb een patched by Enphase, to protect against future vulnerabilities.
+
+You cannot upgrade the firmware of the Envoy device yourself. This is managed ny Enphase.
 
 ## What we are doing
 
