--- a/_cases/2024/DIVD-2024-00011.md
+++ b/_cases/2024/DIVD-2024-00011.md
@@ -18,10 +18,10 @@ cves:
 - CVE-2024-21880
 - CVE-2024-21881
 product: 
-- Enphase Envoy R7
-- Enphase Envoy R8
+- Enphase Envoy 
 versions: 
-- vR7 and vR8
+- vR7 (CVE-2024-21880 and CVE-2024-21881)
+- vR8 (CVE-2024-21876, CVE-2024-21877, and CVE-2024-21878)
 recommendation: Do not expose your Enphase inverter to untrusted networks (e.g. the internet or a visitor network)
 patch_status: Patch available
 -workaround: n/a
@@ -74,13 +74,13 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Six critical vulnerabilities have been discovered in Enphase inverters of versions R7 and R8. The first three can be combined into Remote Command Execution. For older Enphase inverters, the password may be a weak default or calculatable based on the serial number which can be remotely read (See [CVE-2020-25754](https://nvd.nist.gov/vuln/detail/CVE-2020-25754) %}). With these vulnerabilities, attackers could take control over the solar inverter.
+Six critical vulnerabilities have been discovered in Enphase inverters of versions R7 and R8. The first three can be combined into Remote Command Execution. For older Enphase inverters, the password may be a weak default or calculatable based on the serial number which can be remotely read (See [CVE-2020-25754](https://nvd.nist.gov/vuln/detail/CVE-2020-25754). With these vulnerabilities, attackers could take control over the Enphase Envoy device.
 
 ## What you can do
 
-We recommend that you do not expose your Enphase inverter to an untrusted network. As long as these bulnerabilities are unpatched you device can be taken over remotely. We recommend that you do not (re)expose you device after it hasb een patched by Enphase, to protect against future vulnerabilities.
+We recommend that you do not expose your Enphase inverter to an untrusted network. As long as these bulnerabilities are unpatched you device can be taken over remotely. We recommend that you do not (re)expose you device after it has een patched by Enphase, to protect against future vulnerabilities.
 
-You cannot upgrade the firmware of the Envoy device yourself. This is managed ny Enphase.
+You cannot upgrade the firmware of the Envoy device yourself. This is managed by Enphase.
 
 ## What we are doing
 
