--- a/_cases/2024/DIVD-2024-00011.md
+++ b/_cases/2024/DIVD-2024-00011.md
@@ -58,7 +58,7 @@ timeline:
   event: "DIVD starts scanning for vulnerable Envoy devices to assist with prioritizing patch process."
 - start: 2024-04-18
   end:   2024-07-17
-  event: "Time to minited disclosure"
+  event: "Time to limited disclosure"
 - start: 2024-07-17
   end:   
   event: "Limited disclosure of CVEs"
