--- a/_cases/2024/DIVD-2024-00021.md
+++ b/_cases/2024/DIVD-2024-00021.md
@@ -16,9 +16,9 @@ versions:
 - Security Gateways of all versions with the IPsec VPN, Remote Access or Mobile Access software blades are vulnerable.
 recommendation: "Apply released hot fix as soon as possible"
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-05-30
-end:
+end: 2024-07-16
 timeline:
 - start: 2024-05-30
   end:
@@ -38,8 +38,17 @@ timeline:
 - start: 2024-06-20
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
+- start: 2024-07-16
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-07-16
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the third time"
+- start: 2024-07-16
+  end:
+  event: "Case closed"
 
-# ips: 0
+ips: 10200
 
 ---
 ## Summary
