--- a/_cases/2024/DIVD-2024-00033.md
+++ b/_cases/2024/DIVD-2024-00033.md
@@ -26,7 +26,7 @@ versions:
 - Release Washington, below patch 2 Hot Fix 2
 - Release Washington, below patch 3 Hot Fix 1
 - Release Washington, below patch 4
-recommendation: "Check for the patched versions and get those installed"
+recommendation: "Install a patched version of SericeNow"
 workaround: "No"
 patch_status: Released
 status : Open
