--- a/_cases/2024/DIVD-2024-00033.md
+++ b/_cases/2024/DIVD-2024-00033.md
@@ -27,7 +27,7 @@ versions:
 - Release Washington, below patch 3 Hot Fix 1
 - Release Washington, below patch 4
 recommendation: "Install a patched version of SericeNow"
-workaround: "No"
+workaround: "No workaround available"
 patch_status: Released
 status : Open
 start: 2024-07-13
