--- a/_cases/2024/DIVD-2024-00033.md
+++ b/_cases/2024/DIVD-2024-00033.md
@@ -50,7 +50,7 @@ timeline:
 ---
 
 ## Summary
-ServiceNow has addressed an input validation vulnerability that was identified in Vancouver and Washington DC ServiceNow Platform releases. This vulnerability could enable an unauthenticated user to remotely execute code within the context of the Now Platform. ServiceNow applied an update to hosted instances, and ServiceNow released the update to their service partners and customers that are running a self-hosted version.
+ServiceNow has addressed an input validation vulnerability that was identified in Utah, Vancouver and Washington DC ServiceNow Platform releases. This vulnerability could enable an unauthenticated user to remotely execute code within the context of the Now Platform. ServiceNow applied an update to hosted instances, and ServiceNow released the update to their service partners and customers that are running a self-hosted version.
 
 ## Recommendations
 SericeNow released several patched versions. We advice to update to one of the mentioned versions (or better) as soon as possible.
