--- a/_cases/2024/DIVD-2024-00011.md
+++ b/_cases/2024/DIVD-2024-00011.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
-title: Five critical vulnerabilities in Enphase inverters
+title: Six critical vulnerabilities in Enphase inverters
 excerpt: "Six critical vulnerabilities have been discovered in Enphase Envoy solar inverters. DIVD is assisting Enphase with locating vulnerable devices."
 author: Frank Breedijk & Max van der Horst
 lead: Frank Breedijk
@@ -23,7 +23,7 @@ versions:
 - vR7 (CVE-2024-21880 and CVE-2024-21881)
 - vR8 (CVE-2024-21876, CVE-2024-21877, and CVE-2024-21878)
 recommendation: Do not expose your Enphase inverter to untrusted networks (e.g. the internet or a visitor network)
-patch_status: Patch available
+patch_status: Patches available for all execept CVE-2024-21878
 -workaround: n/a
 status : Open
 start: 2024-04-11
