Closing some case files that have been open for way too long

--- a/_cases/2022/DIVD-2022-00052.md
+++ b/_cases/2022/DIVD-2022-00052.md
@@ -3,10 +3,10 @@ layout: case
 title: Multiple vulnerabilities is Cloudflow software
 author: Victor Pasman
 lead: Victor Pasman
-status: Open
+status: Closed
 start: 2023-02-21
-end: 
-ips: 0
+end: 2024-07-21
+ips: n/a
 excerpt: DIVD is scanning for parties vulnerable to CVE-2022-41216 and CVE-2022-41217
 researchers:
 - Victor Pasman
@@ -21,6 +21,8 @@ timeline:
 - start: 2023-02-21
   end:
   event: "DIVD released the CVE-2022-41216 and CVE-2022-41217"
+- start: 2024-07-22
+  event: Case closed, due to inactivity.
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
