--- a/_cases/2023/DIVD-2023-00010.md
+++ b/_cases/2023/DIVD-2023-00010.md
@@ -25,9 +25,9 @@ versions:
 recommendation: Be sure to install the latest Cumulative security Update from Microsoft for Exchange
 patch_status: Fully patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2023-02-14
-end: 
+end: 2024-07-22
 timeline:
 - start: 2023-02-14
   end:
@@ -44,7 +44,9 @@ timeline:
 - start: 2023-05-18
   end:
   event: "DIVD Did the First Mailrun"
-# ips: 0 
+- start: 2024-07-22
+  event: "Case closed, casefile is inactive too long"
+ips: n/a
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 ---
