--- a/_cases/2023/DIVD-2023-00028.md
+++ b/_cases/2023/DIVD-2023-00028.md
@@ -22,9 +22,9 @@ versions:
 - < 2023.0.4 (15.0.4)
 recommendation: Update to the applicable version of MOVEit Transfer listed in the versions section.
 patch_status: Fully patched
-status : Open
+status : Closed
 start: 2023-07-06
-end: 
+end: 2024-07-22
 timeline:
 - start: 2023-07-06
   end: 
@@ -38,7 +38,9 @@ timeline:
 - start: 2023-07-20
   end:
   event: Informed vulnerable parties
-# ips: 0 
+- start: 2024-07-22
+  event: "Case closed, casefile is inactive too long"
+ips: n/a
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 ---
 ## Summary
