--- a/_cases/2023/DIVD-2023-00039.md
+++ b/_cases/2023/DIVD-2023-00039.md
@@ -18,9 +18,9 @@ versions:
 recommendation: Update vCenter Server to the patched versions provided. These are 8.0U1d or 8.0U2, 6.7U3 and 6.5U3. 
 patch_status: patch available
 workaround: There is no workaround for this issue.
-status : Open
+status : Closed
 start: 2023-10-25
-end: 
+end: 2024-07-22
 timeline:
 - start: 2023-10-25
   end:
@@ -28,7 +28,9 @@ timeline:
 - start: 2023-10-26
   end:
   event: "DIVD starts scanning for vulnerable instances."
-
+- start: 2024-07-22
+  event: "Case closed, casefile is inactive too long"
+ips: n/a
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
