--- a/_cases/2024/DIVD-2024-00004.md
+++ b/_cases/2024/DIVD-2024-00004.md
@@ -28,6 +28,10 @@ recommendation: "If you received a notification of a vulnerability, patch your s
 status: Open
 start: 2023-10-04
 end:
+timeline:
+- start: 2023-10-04
+  end:
+  event: "Case started"
 ---
 
 ## Summary
