--- a/_cases/2022/DIVD-2022-00064.md
+++ b/_cases/2022/DIVD-2022-00064.md
@@ -3,7 +3,7 @@ layout: case
 title: "Multiple injection vulnerabilities identified within Axiell Iguana CMS"
 author: Max van der Horst
 lead: Max van der Horst
-status: Open
+status: Closed
 excerpt: "Multiple injection vulnerabilities have been identified within Axiell Iguana CMS, each of which can lead to compromise of the system." 
 researchers:
 - Amr Al Hallak (external reporter and finder)
@@ -19,7 +19,7 @@ versions:
 - All versions prior to 4.5.02
 recommendation: "Upgrade to the latest version of Iguana."
 start: 2022-09-08
-end:
+end: 2024-07-22
 timeline:
 - start: 2022-09-08
   end:
@@ -47,13 +47,11 @@ timeline:
   event: "DIVD contacts Axiell about the additional vulnerabilities."
 - start: 2023-01-03
   end:
-  event: "Limited disclosure first four CVEs"
+  event: "Limited disclosure for the four CVEs"
 - start: 2022-11-21
-  end: open
-  event: Time to acknowldge additional two vulnerabilities
-- start: 2022-11-21
-  end: open
-  event: Time to fix additional two vulnerabilities
+  end: 2024-07-22
+  event: Case closed
+
 jekyll-secinfo:
   cve:
     url: /cves/CVE-
@@ -67,10 +65,9 @@ Multiple injection vulnerabilities have been identified in Axiell Iguana CMS. Le
 
 Upgrade your Iguana version to 4.5.02 or higher.
 
-
 ## What we are doing
 
-DIVD is currently working with the finder and Axiell to get these vulnerabilities patched. Axiell is coordinating the patch process with its customers, after which DIVD will run a scan to confirm. 
+DIVD is currently working with the finder and Axiell to get these vulnerabilities patched. Axiell is coordinating the patch process with its customers.  
 
 {% include timeline.html %}
 
