--- a/_cases/2022/DIVD-2022-00064.md
+++ b/_cases/2022/DIVD-2022-00064.md
@@ -4,6 +4,7 @@ title: "Multiple injection vulnerabilities identified within Axiell Iguana CMS"
 author: Max van der Horst
 lead: Max van der Horst
 status: Closed
+ips: n/a
 excerpt: "Multiple injection vulnerabilities have been identified within Axiell Iguana CMS, each of which can lead to compromise of the system." 
 researchers:
 - Amr Al Hallak (external reporter and finder)
