--- a/_cases/2024/DIVD-2024-00011.md
+++ b/_cases/2024/DIVD-2024-00011.md
@@ -1,9 +1,11 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
-title: Six critical vulnerabilities in Enphase inverters
+title: Six vulnerabilities in Enphase IQ Gateway devices
 excerpt: "Six critical vulnerabilities have been discovered in Enphase Envoy solar inverters. DIVD is assisting Enphase with locating vulnerable devices."
-author: Frank Breedijk & Max van der Horst
+author: 
+- Frank Breedijk
+- Max van der Horst
 lead: Frank Breedijk
 researchers:
 - Wietse Boonstra
@@ -18,11 +20,12 @@ cves:
 - CVE-2024-21880
 - CVE-2024-21881
 product: 
-- Enphase Envoy 
+- Enphase IQ Gateway devices (formerly known as Enphase Envoy)
 versions: 
-- vR7 (CVE-2024-21880 and CVE-2024-21881)
-- vR8 (CVE-2024-21876, CVE-2024-21877, and CVE-2024-21878)
-recommendation: Do not expose your Enphase inverter to untrusted networks (e.g. the internet or a visitor network)
+- CVE-2024-21876, CVE-2024-21877, CVE-2024-21878, and CVE-2024-21879 - vR8, vR7, vR6, vR5 and vR4
+- CVE-2024-21880 - vR7, vR6, vR5 and vR4
+- CVE-2024-21881 - vR5 and vR4
+recommendation: Do not expose your Enphase equipment to untrusted networks (e.g. the internet or a visitor network). If internet connectivity is needed, place the device behind a NAT gateway.
 patch_status: Patches available for all execept CVE-2024-21878
 -workaround: n/a
 status : Open
@@ -31,7 +34,7 @@ end:
 timeline:
 - start: 2024-04-11
   end:
-  event: "Wietse Boonstra reports five vulnerabilities to DIVD CSIRT"
+  event: "Wietse Boonstra reports six vulnerabilities to DIVD CSIRT"
 - start: 2024-04-17
   end:
   event: "Vendor notified via email to cybersecurity (at) enphaseenergy.com and cybersecurity (at) energy.com and via ticket 16059299"
@@ -50,16 +53,16 @@ timeline:
   event: "Time to patch"
   # Time to patch is antoher important metric
 - start: 2024-04-18
-  end:   open
+  end:   2024-07-12
   event: "DIVD and Enphase work together"
 - start: 2024-07-12
   event: "Enphase acknowledges that vulnerabilities are patched and starts updating devices."
 - start: 2024-07-12
   event: "DIVD starts scanning for vulnerable Envoy devices to assist with prioritizing patch process."
 - start: 2024-04-18
-  end:   2024-07-17
+  end:   2024-08-13
   event: "Time to limited disclosure"
-- start: 2024-07-17
+- start: 2024-08-13
   end:   
   event: "Limited disclosure of CVEs"
 # ips: 0 
@@ -74,17 +77,17 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Six critical vulnerabilities have been discovered in Enphase inverters of versions R7 and R8. The first three can be combined into Remote Command Execution. For older Enphase inverters, the password may be a weak default or calculatable based on the serial number which can be remotely read (See [CVE-2020-25754](https://nvd.nist.gov/vuln/detail/CVE-2020-25754). With these vulnerabilities, attackers could take control over the Enphase Envoy device.
+Six critical vulnerabilities have been discovered in Enphase IQ Gateway devices (formerly known as Enphase Envoy). The vulnerabilities are presentin in version 4.x to 8.x. Version 8.2.4225 and later are patched. The first three can be combined into a Remote Command Execution attack. For older (v7.x and older) devices, the password may be a weak default or calculatable based on the serial number which can be remotely read (See [CVE-2020-25754](https://nvd.nist.gov/vuln/detail/CVE-2020-25754). With these vulnerabilities, attackers could take control over the Enphase IQ Gateway device.
 
 ## What you can do
 
-We recommend that you do not expose your Enphase inverter to an untrusted network. As long as these bulnerabilities are unpatched you device can be taken over remotely. We recommend that you do not (re)expose you device after it has een patched by Enphase, to protect against future vulnerabilities.
+We recommend that you do not expose your Enphase IQ Gateway device to an untrusted network. As long as these bulnerabilities are unpatched you device can be taken over remotely. We recommend that you do not (re)expose you device after it has een patched by Enphase, to protect against future vulnerabilities.
 
-You cannot upgrade the firmware of the Envoy device yourself. This is managed by Enphase.
+You cannot upgrade the firmware of the Envoy IQ Gateway yourself. This is managed by Enphase. Enphase has released patches for five of these vulnerabilities which has made exploitation of the remaining cve ({% cve CVE-2024-21878 %}) impossible using any of the other CVEs.
 
 ## What we are doing
 
-DIVD has responsibly disclosed the vulnerability to Enphase, which has remediated the vulnerabilities. Now, DIVD is collaborating with Enphase to find vulnerable and exposed Envoy devices worldwide in order to assist with the patching process.
+DIVD has responsibly disclosed the vulnerability to Enphase, which has remediated the vulnerabilities. Now, DIVD is collaborating with Enphase to find vulnerable and exposed Envoy IQ Gateways worldwide in order to assist with the patching process.
 
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
