File and cosmetic changes...

--- a/_cases/2024/DIVD-2024-00011.md
+++ b/_cases/2024/DIVD-2024-00011.md
@@ -34,7 +34,7 @@ end:
 timeline:
 - start: 2024-04-11
   end:
-  event: "Wietse Boonstra reports six vulnerabilities to DIVD CSIRT"
+  event: "Wietse Boonstra and Hidde Smit report six vulnerabilities to DIVD CSIRT"
 - start: 2024-04-17
   end:
   event: "Vendor notified via email to cybersecurity (at) enphaseenergy.com and cybersecurity (at) energy.com and via ticket 16059299"
@@ -77,7 +77,7 @@ jekyll-secinfo:
 ---
 ## Summary
 
-Six critical vulnerabilities have been discovered in Enphase IQ Gateway devices (formerly known as Enphase Envoy). The vulnerabilities are presentin in version 4.x to 8.x. Version 8.2.4225 and later are patched. The first three can be combined into a Remote Command Execution attack. For older (v7.x and older) devices, the password may be a weak default or calculatable based on the serial number which can be remotely read (See [CVE-2020-25754](https://nvd.nist.gov/vuln/detail/CVE-2020-25754). With these vulnerabilities, attackers could take control over the Enphase IQ Gateway device.
+DIVD researchers Wietse Boonstra and Hidde Smit have discovered six critical vulnerabilities in Enphase IQ Gateway devices (formerly known as Enphase Envoy). The vulnerabilities are presentin in version 4.x to 8.x. Version 8.2.4225 and later are patched. The first three can be combined into a Remote Command Execution attack. For older (v7.x and older) devices, the password may be a weak default or calculatable based on the serial number which can be remotely read (See [CVE-2020-25754](https://nvd.nist.gov/vuln/detail/CVE-2020-25754)). With these vulnerabilities, attackers could take control over the Enphase IQ Gateway device.
 
 ## What you can do
 
